--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/FamilyHistoryPivots/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/FamilyHistoryPivots/Delete.cshtml
@@ -4,61 +4,89 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>FamilyHistoryPivot</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.date)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.date)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.frequency)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.frequency)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.notes)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.notes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Patient.patientID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Patient.patientID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PossibleFamilyHistory.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PossibleFamilyHistory.Name)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+<div class="jumbotron">
+    <h1>Delete</h1>
+    <p class="lead"></p>
 </div>
+
+@if (User.Identity.IsAuthenticated)
+{
+    if (ViewBag.displayMenu == "Yes")
+    {
+
+        <h3>Are you sure you want to delete this?</h3>
+        <div>
+            <h4>FamilyHistoryPivot</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.date)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.date)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.frequency)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.frequency)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.notes)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.notes)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Patient.patientID)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Patient.patientID)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.PossibleFamilyHistory.Name)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.PossibleFamilyHistory.Name)
+                </dd>
+
+            </dl>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
+            }
+        </div>
+
+    }
+    else
+    {
+        <h2>  Unauthorized. </h2>
+        <h3>
+            You need to be an administrator to access this page.
+        </h3>
+    }
+}
+else
+{
+    <h2>  Unauthorized. </h2>
+    <h3>
+        Please log in or register to access this page.
+    </h3>
+}
+
+
