--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Users/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Users/Index.cshtml
@@ -1,6 +1,4 @@
 ﻿@{
-    /**/
-
     ViewBag.Title = "Manage Users";
 }
 
@@ -18,8 +16,51 @@
                 <h2>Manage Users</h2>
             </div>
         </div>
-        <div>
-            TABLE OF USERS GOES HERE
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        UserName
+                    </th>
+                    <th>
+                        Email
+                    </th>
+                    <th>
+                        Role
+                    </th>
+                    <th></th>
+                </tr>
+
+                @foreach (var item in ViewBag.userlist)
+        {
+            <tr>
+                <td>
+                    @item.UserName
+                </td>
+                <td>
+                    @item.Email
+                </td>
+                <td>
+                    @ViewBag.userMGR.GetRolesAsync(item.Id).Result[0]
+                </td>
+                <td>
+                    @if (item.Id.Equals(ViewBag.currentUserID))
+                    {
+                    }
+                    else
+                    {
+                    <p>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </p>
+                        
+                    }
+                    
+                </td>
+            </tr>
+}
+
+            </table>
         </div>
 
     }
