--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNet.Identity;
+@*@using Microsoft.AspNet.Identity.EntityFramework;*@
+@using TumorTaskforce_Webapp_1.Models;
+@using Microsoft.AspNet.Identity.EntityFramework;
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -19,15 +24,45 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                        @Html.ActionLink("Home", "Index", "Home")
-                    </li>
-                    <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                        @Html.ActionLink("Patients", "Index", "Patients")
-                    </li>
-                    <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                        @Html.ActionLink("Compare", "Compare", "Patients")
-                    </li>
+
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        var user = User.Identity;
+                        ApplicationDbContext context = new ApplicationDbContext();
+                        var UserManager = new UserManager<ApplicationUser>(new UserStore<ApplicationUser>(context));
+                        var s = UserManager.GetRoles(user.GetUserId());
+                        if (s[0].ToString() == "Admin")
+                        {
+                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                                @Html.ActionLink("Home", "Index", "Home")
+                            </li>
+                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                                @Html.ActionLink("Patients", "Index", "Patients")
+                            </li>
+                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                                @Html.ActionLink("Compare", "Compare", "Patients")
+                            </li>
+                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                                @Html.ActionLink("Manage", "Manage", "Home")
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                                @Html.ActionLink("Home", "Index", "Home")
+                            </li>
+                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                                @Html.ActionLink("Compare", "Compare", "Patients")
+                            </li>
+                        }
+                    }
+                    else
+                    {
+                        <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                                @Html.ActionLink("Home", "Index", "Home")
+                            </li>
+                    }
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
