--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Users/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Users/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model TumorTaskforce_Webapp_1.Models.UserViewModel
+
+@{
     ViewBag.Title = "Manage Users";
 }
 
@@ -12,15 +14,12 @@
     if (ViewBag.displayMenu == "Yes")
     {
         <div class="row">
-            <div class="col-md-6">
-                <h2>Manage Users</h2>
-            </div>
         </div>
         using (Html.BeginForm())
         {
-
+            @Html.AntiForgeryToken()
             <div class="form-horizontal">
-                <h4>Treatment</h4>
+                <h4>User</h4>
                 <hr />
 
                 @*<div class="form-group">
@@ -34,21 +33,21 @@
                 <div class="form-group">
                     UserName
                     <div class="col-md-10">
-                        @ViewBag.user.UserName
+                        @Html.DisplayFor(i => i.UserName)
                     </div>
                 </div>
 
                 <div class="form-group">
                     Email
                     <div class="col-md-10">
-                        @ViewBag.user.Email
+                        @Html.DisplayFor(i => i.Email)
                     </div>
                 </div>
 
                 <div class="form-group">
                     Role
                     <div class="col-md-10">
-                        
+                        @Html.DropDownListFor(i => i.Role, (SelectList)ViewBag.roles)
                     </div>
                 </div>
 
