--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
@@ -45,9 +45,14 @@
                 </p>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <p>
                     @Html.ActionLink("Users", "Index", "Users")<br />
+                </p>
+            </div>
+            <div class="col-md-3">
+                <p>
+                    @Html.ActionLink("Comparison Patients", "CompIndex", "Patients")<br />
                 </p>
             </div>
         </div>
