--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model TumorTaskforce_Webapp_1.Patient
-
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Delete";
 }
@@ -11,7 +11,7 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-    if (ViewBag.displayMenu == "Yes")
+    if (ViewBag.displayMenu == "Yes" || (Model.isCompare && Model.userName == User.Identity.GetUserName()))
     {
 
         <h3>Are you sure you want to delete this?</h3>
@@ -96,12 +96,13 @@
                 </dd>
 
                 <dt>
-                    <br />Review of Systems<br />
+                    <br />
+                    <br />Review of Systems<br /><br />
+
                     @Html.DisplayNameFor(model => model.Constitutional)
                 </dt>
 
                 <dd>
-                    <br /><br />
                     @Html.DisplayFor(model => model.Constitutional)
                 </dd>
 
@@ -215,6 +216,7 @@
                     <br />
                     @foreach (OtherMedsPivot sp in Model.OtherMedsPivots)
                     {
+                        @Html.DisplayFor(spitem => sp.PossibleOtherMed.Name)
                         if (sp.date != null)
                         {
                             <tag> - </tag>
@@ -326,7 +328,15 @@
 
                 <div class="form-actions no-color">
                     <input type="submit" value="Delete" class="btn btn-default" /> |
-                    @Html.ActionLink("Back to List", "Index")
+                    @if(Model.isCompare)
+                    {
+                        @Html.ActionLink("Cancel", "Index", "Home");
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Back to List", "Index");
+
+                    }
                 </div>
             }
         </div>
