--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TumorTaskforce_Webapp_1.Patient
+@using Microsoft.AspNet.Identity
 
 @{
     ViewBag.Title = "Edit";
@@ -11,7 +12,7 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-    if (ViewBag.displayMenu == "Yes")
+    if (ViewBag.displayMenu == "Yes" || (ViewBag.isCompare && Model.userName==User.Identity.GetUserName()))
     {
 
         using (Html.BeginForm())
@@ -23,6 +24,9 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.patientID)
+                @Html.HiddenFor(model => model.userName)
+                @Html.HiddenFor(model => model.isCompare)
+                @Html.HiddenFor(model => model.comparisonResults)
                 <div class="form-group">
                     @Html.LabelFor(model => model.Sex, "Sex", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
